Fix UI: truncate input on long questionnaire names (#2028)

--- a/web/static/css/_layout.scss
+++ b/web/static/css/_layout.scss
@@ -177,6 +177,9 @@ header {
       margin: 0;
     }
     .title {
+      position: absolute;
+      display: flex;
+      align-items: center;
       max-width: 100%;
       + input {
         height: 30px;
